// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingTest / Ping Changes nothing if there's no prop passed in 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
</div>
`;

exports[`PingTest / Ping Fetches and updates state if button is clicked 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
  <p>
    Yoda
  </p>
  <p>
    Time string
  </p>
</div>
`;

exports[`PingTest / Ping Matches previous setup 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
</div>
`;
